开发[最近玩过]

--- a/spec/javascripts/fixtures/application.html
+++ b/spec/javascripts/fixtures/application.html
@@ -5,12 +5,15 @@
   <title>Application | JavaScript Testing Results</title>
   <link rel="stylesheet" href="screw.css" type="text/css" charset="utf-8" /> 
   <script type="text/javascript" src="../../../vendor/plugins/blue-ridge/lib/blue-ridge.js"></script>
+  <script type="text/javascript">
+    var game_id = 1;
+    var game_name = '猫狗大战';
+  </script>
 </head>
 
 <body>
-  <!-- Put any HTML fixture elements here. -->
-  <div class="select_me"/>
-  <span class="select_me"/>
-  <div class="dont_select_me"/>
+  <a href="/" class="next"/>
+  <ul id="history">
+  </ul>
 </body>
 </html>
